add validation for feedback add get all for feedback sys